--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,7 @@
-<div>
-
+<div class="home">
+    <img src="images/beer.png" alt="beer image" width="300">
+    <a class="home-btn" href="/beers">Check The Beers!</a>
+    
+    <a class="home-btn"  href="/random-beers">Check Random Beer</a>  
+    
 </div>
